--- a/src/app.css
+++ b/src/app.css
@@ -1,27 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
 :root {
-    --bg: #FFFFFF;
-    --text: #212121;
-    --green: #17CE92;
-    --green-active: #06B47B;
-    --secondary: #F5F5F5;
-    --text-secondary: #9E9E9E;
+	--green: #17ce92;
+	--green-active: #0ec487;
 }
 
 body {
-    background: var(--bg);
-    color: var(--text);
+	width: 100vw;
+	height: 100dvh;
 
-    width: 100vw;
-    height: 100dvh;
-
-    padding: 0;
-    margin: 0;
+	font-family: 'Inter', serif;
+	font-optical-sizing: auto;
+	font-style: normal;
 }
 
-.green-shadow {
-    box-shadow: 4px 8px 24px 0 rgba(23, 206, 146, 0.25);
+.button-shaddow {
+	box-shadow: 4px 8px 24px rgba(23, 206, 146, 0.25);
 }
