--- a/src/app.css
+++ b/src/app.css
@@ -1,23 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
-
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+* {
+	box-sizing: border-box;
+}
+
 :root {
 	--green: #17ce92;
-	--green-active: #0ec487;
 }
 
 body {
 	width: 100vw;
 	height: 100dvh;
-
-	font-family: 'Inter', serif;
-	font-optical-sizing: auto;
-	font-style: normal;
+	padding: 0;
+	margin: 0;
 }
 
-.button-shaddow {
-	box-shadow: 4px 8px 24px rgba(23, 206, 146, 0.25);
+.content-max-h {
+	max-height: calc(100dvh - 56px - 84px - 0.75rem * 2 - 50px);
 }
