--- a/src/app.css
+++ b/src/app.css
@@ -2,21 +2,20 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-* {
-	box-sizing: border-box;
-}
-
 :root {
+	--link-bg: #f5f5f5;
+	--text-secondary: #9e9e9e;
+	--text-small: #616161;
+	--secondary-bg: #f2f2f2;
 	--green: #17ce92;
+	--green-active: #1bbb86;
 }
 
 body {
 	width: 100vw;
 	height: 100dvh;
-	padding: 0;
-	margin: 0;
 }
 
-.content-max-h {
-	max-height: calc(100dvh - 56px - 84px - 0.75rem * 2 - 50px);
+.scroll-content {
+	max-height: calc(100dvh - 1rem - 84px - 60px - 0.75rem * 3);
 }
