--- a/src/app.css
+++ b/src/app.css
@@ -3,27 +3,31 @@
 @import 'tailwindcss/utilities';
 
 :root {
-	--link-bg: #f5f5f5;
-	--text-secondary: #9e9e9e;
-	--text-small: #616161;
-	--secondary-bg: #f2f2f2;
-	--green: #17ce92;
-	--green-active: #1bbb86;
+	--bg: #000000;
+	--bg-2: #232323;
+	--bg-active: #ffffff;
+	--text: #ffffff;
+	--text-2: #a9a9a9;
 }
 
 body {
+	background-color: var(--bg);
+	color: var(--text);
+
 	width: 100vw;
 	height: 100dvh;
+
+	padding: 0;
+	margin: 0;
 }
 
-.scroll-content {
-	max-height: calc(100dvh - 1rem - 84px - 60px - 0.75rem * 3);
+.fja {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.scroll-content-2 {
-	max-height: calc(100dvh - 1rem - 84px - 60px - 0.75rem * 4);
-}
-
-svg {
-	@apply fill-current;
+.invert-based-on-z {
+	mix-blend-mode: difference;
+	color: white;
 }
